--- a/src/css/index.css
+++ b/src/css/index.css
@@ -50,3 +50,13 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.checkmsg {
+  font-size: xx-large;
+  font-weight: bold;
+  background-color: #1a1a1a;
+  color: green;
+  border-radius: 10px;
+  padding: 1%;
+}
+
